<resources>
    <string name="app_name">SailTracker</string>

    <!-- ACTIVITIES NAMES -->
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="gallery">Gallery</string>
    <string name="search">Search</string>

    <!-- SINGLE WORDS -->
    <string name="points">Points</string>
    <string name="sails">Sails</string>
    <string name="purchase">Purchase</string>
    <string name="price">Price</string>
    <string name="finish">Finish</string>
    <string name="add">Add</string>
    <string name="dash_symbol">-</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="plus_sign">+</string>
    <string name="loading">Loading</string>
    <string name="photo">Photo</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="background">Background</string>

    <!-- NEXT SAIL FRAGMENT -->
    <string name="my_next_event_title">My Next Event</string>
    <string name="my_next_event_load_name">Loading Your Next Event…</string>

    <!-- EVENT TYPES -->
    <string name="evening_event">Evening\nEvent</string>
    <string name="guided_sail">Guided\nSail</string>
    <string name="members_sail">Members\nSail</string>

    <!-- EVENT CARD -->
    <string name="event_card_more_info">More Info…</string>
    <string name="event_card_less_info">Less Info…</string>


    <!-- LAYOUT EXAMPLES -->
    <string name="example_date">19.09.2020</string>
    <string name="example_hour">15:00</string>
    <string name="example_hour_range">15:00–19:00</string>
    <string name="example_place">Marina Shavit, Haifa</string>
    <string name="example_phone">050—1234567</string>
    <string name="example_code">123456</string>
    <string name="example_name">Israel Israeli</string>
    <string name="example_event_name">Single Handed Guided Sail</string>
    <string name="example_event_description">In this guided sail you will learn how to sail by
        using one hand only, this is a very interesting topic for who wants to discover new things about sailing techniques</string>
    <string name="number_00">00</string>
    <string name="example_registration_status">3/6 Registered</string>

    <!-- SEARCH SCREEN -->
    <string name="searchbar_title">Club member phone num.</string>
    <string name="label_search_screen">Search for club members\nand take a look at their photos.</string>
    <string name="search_title">Gallery Explorer</string>
    <string name="search_label_phone_not_found">Phone number %s \nisn\'t registered to the sailing club.</string>

    <!-- GALLERY SCREEN -->
    <string name="take_photo">Take a Photo</string>
    <string name="gallery_title">My Gallery</string>

    <!-- HISTORY SCREEN -->
    <string name="history_title">My Sails and Events</string>
    <string name="history_loading_message">Loading\nSail &amp; Events…</string>

    <!-- LOGIN SCREEN -->
    <string name="login_phone">Enter your phone number to log-in</string>
    <string name="login_code">We sent you an SMS with a verification code:</string>
    <string name="login_name">Choose your app display name:</string>

    <!-- PROFILE FRAGMENT -->
    <string name="profile_events_history">Events History</string>

    <!-- ADDING EVENT TITLES -->
    <string name="add_event_title">Add Event/Sail</string>
    <string name="add_event_name_label">Choose Name and Type</string>
    <string name="add_event_name_hint">Insert Event/Sail Name</string>
    <string name="add_event_max_participants">Max Participants</string>
    <string name="add_event_start">Select Start Time</string>
    <string name="add_event_end">Select End Time</string>
    <string name="add_event_description">Insert Event Description</string>
    <string name="add_event_time_start_label">Start Time</string>
    <string name="add_event_time_end_label">End Time</string>
    <string name="add_event_hour_empty">--:--</string>

    <!-- LABELS -->
    <string name="label_no_next_event">Register to an event and it will be appeared here…</string>
    <string name="label_no_events_calendar">No Events or Sails were found…</string>
    <string name="label_future_events">Upcoming Sails and Events</string>
    <string name="label_past_events">Past Sails and Events</string>
    <string name="label_loading_splash_screen">Loading…</string>
    <string name="label_choose_new_name">Choose a new name…</string>


    <!-- LOADING MESSAGES -->
    <string name="loading_msg_default">Loading…</string>
    <string name="loading_msg_events">Loading Events…</string>
    <string name="loading_msg_profile">Loading Profile…</string>
    <string name="loading_msg_photos">Loading Photos…</string>

    <!-- SPECIAL FORMATS -->
    <string name="hour_time_format">%02d:%02d %2s</string>
    <string name="profile_events_history_label">%d Events</string>
    <string name="profile_events_history_single_label">%d Event</string>

    <!-- EVENT HOLDERS PRICE FORMATS -->
    <string name="event_register_price_label">%d Register</string>
    <string name="event_unregister_price_label">%d Unregister</string>
    <string name="event_watch_price_label">%d Watch</string>
    <string name="event_unwatch_price_label">%d Unwatch</string>
    <string name="event_full_price_label">%d Full</string>


</resources>