<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:cardCornerRadius="10dp"
        >



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/photo_item_IMG_background"
            android:background="@android:color/black"
            android:contentDescription="@string/photo"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp"
            android:src="@drawable/ic_loading"
            android:contentDescription="@string/loading"
            android:id="@+id/photo_item_IMG_loading"
            />




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/photo_item_IMG_inner_image"
            android:scaleType="centerCrop"
            android:contentDescription="@string/gallery"
            />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>