<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background"
    tools:context=".activity.AddEventActivity">

    <TextView
        android:id="@+id/add_event_LBL_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/add_event_title"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toTopOf="parent" />


    <ViewFlipper
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/add_event_LAY_flipper"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/add_event_LBL_title"
        app:layout_constraintBottom_toTopOf="@id/add_event_LAY_buttons"
        android:layout_marginBottom="50dp"
        >



        <!-- Step 1: name and type -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_event_LAY_step_1"
            >


            <TextView
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintHeight_percent="0.15"
                android:autoSizeMaxTextSize="26sp"
                android:autoSizeMinTextSize="14sp"
                android:padding="10dp"
                android:text="@string/add_event_name_label"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:lines="1"
                android:id="@+id/add_event_LBL_name"
                />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.1"
                android:id="@+id/add_event_EDT_name"
                android:hint="@string/add_event_name_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_name"
                android:gravity="center"
                android:autofillHints="@string/add_event_name_label"
                android:inputType="textPersonName"
                android:layout_marginTop="10dp"
                android:ems="12"
                android:autoSizeTextType="uniform"
                />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/add_event_EDT_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="horizontal"
                android:id="@+id/add_event_RAT_select_type"
                app:layout_constraintDimensionRatio="h,3:1"
                android:weightSum="3"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="5dp"
                >

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/add_event_RBTN_free_event"
                    style="@style/FormRadioButton"
                    android:text="@string/evening_event"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/add_event_RBTN_members_sail"
                    style="@style/FormRadioButton"
                    android:text="@string/members_sail"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/add_event_event_RBTN_guided_sail"
                    android:text="@string/guided_sail"
                    style="@style/FormRadioButton"
                    />

            </RadioGroup>



        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Step 2: time -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_event_LAY_step_2"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.15"
                style="@style/FormTextLabel"
                android:text="@string/add_event_time_start_label"
                android:id="@+id/add_event_LBL_start_time"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="22sp"
                android:autoSizeTextType="uniform"
                app:icon="@drawable/ic_baseline_access_time_24"
                app:iconGravity="start"
                app:iconPadding="0dp"
                app:iconSize="32dp"
                android:lines="1"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_start_time"
                android:text="@string/add_event_hour_empty"
                android:id="@+id/add_event_BTN_start_time"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.15"
                app:layout_constraintTop_toBottomOf="@id/add_event_BTN_start_time"
                style="@style/FormTextLabel"
                android:layout_marginTop="30dp"
                android:text="@string/add_event_time_end_label"
                android:id="@+id/add_event_LBL_end_time"
                />


            <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeMaxTextSize="22sp"
                android:autoSizeTextType="uniform"
                android:lines="1"
                app:icon="@drawable/ic_baseline_access_time_24"
                app:iconGravity="start"
                app:iconPadding="0dp"
                app:iconSize="32dp"
                android:padding="20dp"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toBottomOf="@id/add_event_LBL_end_time"
                android:text="@string/add_event_hour_empty"
                android:id="@+id/add_event_BTN_end_time"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>



        <!-- Step 3: max participant, price, description -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/add_event_LAY_step_3"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintHeight_percent="0.2"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:id="@+id/add_event_LAY_price_participants"
                app:layout_constraintTop_toTopOf="parent"
                android:weightSum="1"
                >

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="11"
                    app:icon="@drawable/ic_baseline_person_24"
                    app:iconSize="36dp"
                    android:lines="2"
                    android:maxLines="2"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:hint="@string/add_event_max_participants"
                    android:id="@+id/add_event_BTN_max_participants"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="8"
                    app:icon="@drawable/ic_points_wheel"
                    app:iconSize="36dp"
                    app:iconTintMode="multiply"
                    android:inputType="number"
                    android:gravity="center"
                    android:id="@+id/add_event_BTN_price"
                    android:hint="@string/price"
                    android:textColorHint="@color/colorPrimaryDark"
                    />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:padding="20dp"
                android:minLines="1"
                android:lines="2"
                android:maxLines="5"
                android:enabled="true"
                android:inputType="textLongMessage"
                android:hint="@string/add_event_description"
                app:layout_constraintTop_toBottomOf="@id/add_event_LAY_price_participants" android:id="@+id/add_event_EDT_description"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>








    </ViewFlipper>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/add_event_LAY_buttons"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="1"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:autoSizeMinTextSize="13sp"
            android:autoSizeMaxTextSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/back"
            android:id="@+id/add_event_BTN_back"
            app:cornerRadius="10dp"
            android:textColor="@android:color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:autoSizeTextType="uniform"
            android:padding="15dp"
            android:autoSizeMinTextSize="13sp"
            android:autoSizeMaxTextSize="20sp"
            android:layout_margin="20dp"
            app:cornerRadius="10dp"
            android:text="@string/next"
            android:id="@+id/add_event_BTN_next"
            android:textColor="@android:color/white"
            />



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>